# In-context-RL-with-AD

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
experiments/DarkRoomEasy/: config.yaml  experiment.py
experiments/DarkRoomHard/: config.yaml  experiment.py
experiments/KArmedBandit/: config.yaml  experiment.py
experiments/KArmedBanditDistillation/: config.yaml  experiment.py
models/teachers/: A3CNet.py  ThompsonSampling.py  __init__.py
models/transformers/AR/: ARAddTransformer.py  ARConTransformer.py  ARMulTransformer.py  __init__.py
scripts/KArmedBandit/: config.py  experiment.py  experiment_template.py
src/: __init__.py
src/environments/: DarkRoom.py  Environment.py  KArmedBandit.py  __init__.py  k_armed_bandit.py
src/layers/: PositionalEncoding.py  __init__.py  positional_encoding.py
src/models/: __init__.py  ar_add_transformer.py  ar_con_transformer.py  ar_mul_transformer.py  transformer_base.py
src/models/agents/: DQNAgent.py  RLAgent.py  ThompsonSampling.py  __init__.py
src/tools/: __init__.py
src/tools/KArmedBandit/: TransformerTrainer.py  __init__.py  (+3 more)
src/utils/: __init__.py  common.py  dark_room.py  k_armed_bandit.py  k_armer_bandit.py
src/workflow/: SequenceDataset.py  __init__.py  dataset_generator.py  tracking.py
tests/: test_generate_karmedbandit_traces.py
tests/common/: test_batch_iterator.py
tests/k_armed_bandit/: test_generate_karmedbandit_traces.py  test_karmedbandit_run_in_context.py  test_karmedbandit_trainer.py  test_train.py  test_trajectories_to_sequences.py
tests/models/: test_a3c.py
(+8 files in other folders)
