[project]
name = "in-context-rl-with-ad"
version = "0.1.0"
description = "The project is a sandbox for conducting experiments with distillation of the learning algorithm."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "mlflow>=3.8.1",
    "numpy>=2.2.6",
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
    "rich>=14.2.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
